# crowemi-trades-lambda-get-data

./: Dockerfile  README.md  deploy.sh  get_data.py  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml
deploy/: deploy.py
tests/: test_get_data.py
