[tool.poetry]
name = "crowemi-trades-lambda-get-data"
version = "0.1.0"
description = "A lambda for getting data from Polygon API."
authors = ["crowemi <crowemi@hotmail.com>"]
readme = "README.md"
packages = [{include = "crowemi_trades_lambda_get_data"}]

[tool.poetry.dependencies]
python = "^3.9"
crowemi-trades = {git = "https://github.com/crowemi/crowemi-trades.git", rev = "0.1.5"}
crowemi-helps = {git = "https://github.com/crowemi/crowemi-helps.git", rev = "0.1.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
